# FYP

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
fyp/data/: coco_captions.py  conceptual_captions.py  download_file.py  flickr8k.py  generate_features.py  oscar_data.py
fyp/data/coco_util/: generate_features.py
fyp/data/conceptual_captions_util/: generate_features.py
fyp/data/flickr8k_util/: download.py  flickr8k_LM.py  flickr8k_bert.py  process.py
fyp/models/electra/: config.py  finetune_captioning.py  model.py  pretrain.py  train.py
fyp/models/features/: model.py
fyp/models/oscar/: args.py  cbs.py  distill.py  modeling_bert.py  modeling_utils.py  other.py  test.py
fyp/models/simple_rnn/: eval.py  model.py  test.py  train.py
fyp/models/utils/: checkpoint_n_steps.py
fyp/models/visualbert/: config.py  eval.py  model.py  train.py
notebooks/: BERT-tests.ipynb  detectron_features.py  detectron_features_batch.py  detr_detection.py  masking.py  object_detection.py  remove_embeddings.py  test_tokenizer.py
tests/: test_flickr8k.py  test_fyp.py
